--- a/React/dojo-blog/package.json
+++ b/React/dojo-blog/package.json
@@ -9,7 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -22,8 +22,8 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
-  },
+    ],
+
   "browserslist": {
     "production": [
       ">0.2%",
@@ -35,5 +35,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.42.0",
+    "eslint-plugin-react": "^7.32.2"
+  }
   }
 }
+
