--- a/React/dojo-blog/package.json
+++ b/React/dojo-blog/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -23,23 +22,25 @@
       "react-app",
       "react-app/jest"
     ],
-
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
+    },
+    "devDependencies": {
+      "eslint": "^8.42.0",
+      "eslint-plugin-react": "^7.32.2"
+    }
   },
   "devDependencies": {
-    "eslint": "^8.42.0",
-    "eslint-plugin-react": "^7.32.2"
-  }
+    "@testing-library/react": "^14.0.0",
+    "jest": "^27.5.1"
   }
 }
-
